--- a/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
+<div *ngIf="sign.sign_unit === 'chu_ky_anh'" class="content">
   <div class="stamp-content">
     <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
       alt="mobifone.contract">
@@ -10,7 +10,32 @@
   </div>
 </div>
 
-<div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
+<div *ngIf="sign.sign_unit === 'chu_ky_so_con_dau_va_thong_tin'" class="content">
+  <div class="stamp-content item-left">
+    <img src='assets/img/stamp.svg' alt="mobifone.contract">
+    <div class="font-sign">Con dấu/ Chữ ký</div>
+  </div>
+  <div class="sign-info-content item-right">
+    <img src='assets/img/only_info.svg' alt="mobifone.contract">
+    <div class="font-sign">Thông tin chữ ký số</div>
+  </div>
+</div>
+
+<div *ngIf="sign.sign_unit === 'chu_ky_so_con_dau'" class="content">
+  <div class="stamp-content item-left" style="flex-basis: 100% !important; margin-right: 0px !important">
+    <img src='assets/img/stamp.svg' alt="mobifone.contract">
+    <div class="font-sign">Con dấu/ Chữ ký</div>
+  </div>
+</div>
+
+<div *ngIf="sign.sign_unit === 'chu_ky_so_thong_tin'" class="content">
+  <div class="sign-info-content item-right" style="flex-basis: 100% !important;">
+    <img src='assets/img/only_info.svg' alt="mobifone.contract">
+    <div class="font-sign">Thông tin chữ ký số</div>
+  </div>
+</div>
+
+<div class="text-sign" *ngIf="sign.sign_unit === 'text' || sign.sign_unit === 'so_tai_lieu'">
 <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
   <span [ngStyle]="getStyleText(sign)" id="input-text">{{getText(sign)}}</span>
 </div>
