Sửa giao diện 3 loại ký số tạo hợp đồng theo mẫu

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -479,7 +479,7 @@
                   <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là chứng thư số-->
                   <div class="participants--input" *ngIf="getDataSignCert(d).length > 0">
                     <div class="participants__name">
-                      <div class="label-text">{{'tax_code.cardId' | translate}}&nbsp;
+                      <div class="label-text flex">{{'tax_code.cardId' | translate}}&nbsp;
                         <span class="required-title">*</span>
                         <div style="color: #ffc107;">({{'info.cert' | translate}})</div>
                       </div>
@@ -580,7 +580,7 @@
                   <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là chứng thư số-->
                   <div class="col-md-6" style="padding-right: 7px;" *ngIf="getDataSignCert(d).length > 0">
                     <div class="participants__name">
-                      <div class="label-text">{{'tax_code.cardId' | translate}}&nbsp;
+                      <div class="label-text flex">{{'tax_code.cardId' | translate}}&nbsp;
                         <span class="required-title">*</span>
                         <div style="color: #ffc107;">({{'info.cert' | translate}})</div>
                       </div>
