--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.scss
@@ -347,8 +347,19 @@ button {
 ::ng-deep .p-multiselect-label,
 ::ng-deep .p-dropdown-label,
 ::ng-deep .p-dropdown-filter {
-  color: #00186D;
-  font-size: 14px;
+  color: #00186D !important;
+  font-size: 14px !important;
   font-weight: 500;
   line-height: 21px;
+}
+
+:host ::ng-deep {
+  .p-disabled, .p-component:disabled {
+    opacity: 1 !important;
+    pointer-events: all; /* Allow hover events on disabled elements */
+  }
+
+  .p-disabled:hover, .p-component:disabled:hover {
+    border: 1px solid #286CF5 !important;
+  }
 }
