--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
-                <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
+                <!-- <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div class="flex">
@@ -63,6 +63,25 @@
                       </div>&nbsp;
                       <div class="text-header-user-view">
                         {{'Đăng nhập bằng số điện thoại' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+                <div class="participants--input col-md-6" style="display: flex; justify-content: flex-end; padding-left: 7px;">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div class="flex">
+                        <input
+                          class="checkbox-hide-processing-thread hover-item"
+                          type="checkbox"
+                          name="checkPhoneMailOrgViewer_{{index}}"
+                          (change)="changeTypeSign(d)"
+                          [checked]="d.login_by === 'phone'"
+                        />
+                      </div>
+                      &nbsp;
+                      <div class="text-check-box-contract">
+                        {{ "typeOfSignPhone" | translate }}
                       </div>
                     </div>
                   </div>
@@ -277,8 +296,7 @@
                   </div>
                 </div>
 
-                <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
-                  <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
+                <!-- <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div class="flex">
@@ -298,6 +316,25 @@
                       </div>&nbsp;
                       <div class="text-check-box-contract">
                         {{'typeOfSignPhone' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+                <div class="participants--input col-md-6" style="display: flex; justify-content: flex-end; padding-left: 7px;">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div class="flex">
+                        <input
+                          class="checkbox-hide-processing-thread hover-item"
+                          type="checkbox"
+                          name="checkPhoneMailOrgSign_{{index}}"
+                          (change)="changeTypeSign(d, index,null,'signer')"
+                          [checked]="d.login_by === 'phone'"
+                        />
+                      </div>
+                      &nbsp;
+                      <div class="text-check-box-contract">
+                        {{ "typeOfSignPhone" | translate }}
                       </div>
                     </div>
                   </div>
@@ -1069,7 +1106,7 @@
                       </div>
                     </div>
 
-                    <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
+                    <!-- <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
                       <div class="participants__name">
                         <div class="label_detail text-color">
                           <div class="flex">
@@ -1089,6 +1126,25 @@
                           </div>&nbsp;
                           <div class="text-header-user-view">
                             {{'typeOfSignPhone' | translate}}
+                          </div>
+                        </div>
+                      </div>
+                    </div> -->
+                    <div class="participants--input col-md-6" style="display: flex; justify-content: flex-end; padding-left: 7px;">
+                      <div class="participants__name">
+                        <div class="label_detail text-color">
+                          <div class="flex">
+                            <input
+                              class="checkbox-hide-processing-thread hover-item"
+                              type="checkbox"
+                              name="checkPhoneMailPartReview_{{index}}"
+                              (change)="changeTypeSign(d)"
+                              [checked]="d.login_by === 'phone'"
+                            />
+                          </div>
+                          &nbsp;
+                          <div class="text-check-box-contract">
+                            {{ "typeOfSignPhone" | translate }}
                           </div>
                         </div>
                       </div>
@@ -1315,7 +1371,7 @@
                       </div>
                     </div>
 
-                    <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
+                    <!-- <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
                       <div class="participants__name">
                         <div class="label_detail text-color">
                           <div class="flex">
@@ -1335,6 +1391,25 @@
                           </div>&nbsp;
                           <div class="text-header-user-view">
                             {{'typeOfSignPhone' | translate}}
+                          </div>
+                        </div>
+                      </div>
+                    </div> -->
+                    <div class="participants--input col-md-6" style="display: flex; justify-content: flex-end; padding-left: 7px;">
+                      <div class="participants__name">
+                        <div class="label_detail text-color">
+                          <div class="flex">
+                            <input
+                              class="checkbox-hide-processing-thread hover-item"
+                              type="checkbox"
+                              name="checkPhoneMailPartSign_{{index}}"
+                              (change)="changeTypeSign(d, index,id, 'sign_partner')"
+                              [checked]="d.login_by === 'phone'"
+                            />
+                          </div>
+                          &nbsp;
+                          <div class="text-check-box-contract">
+                            {{ "typeOfSignPhone" | translate }}
                           </div>
                         </div>
                       </div>
@@ -1933,7 +2008,7 @@
                     </div>
                   </div>
 
-                  <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
+                  <!-- <div class="participants--input col-md-6" style="display: flex; justify-content: space-between; padding-left: 7px;">
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div class="flex">
@@ -1953,6 +2028,25 @@
                         </div>&nbsp;
                         <div class="text-header-user-view">
                           {{'typeOfSignPhone' | translate}}
+                        </div>
+                      </div>
+                    </div>
+                  </div> -->
+                  <div class="participants--input col-md-6" style="display: flex; justify-content: flex-end; padding-left: 7px;">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div class="flex">
+                          <input
+                            class="checkbox-hide-processing-thread hover-item"
+                            type="checkbox"
+                            name="checkPhoneMailPerson_{{index}}"
+                            (change)="changeTypeSign(d, index,null,'personal')"
+                            [checked]="d.login_by === 'phone'"
+                          />
+                        </div>
+                        &nbsp;
+                        <div class="text-check-box-contract">
+                          {{ "typeOfSignPhone" | translate }}
                         </div>
                       </div>
                     </div>
