--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
+<div *ngIf="sign.sign_unit == 'chu_ky_so'" class="content">
   <div class="skeleton-sign">
   <div  [ngClass]="{
                       'stamp-type' : sign.type_image_signature == 2,
@@ -39,6 +39,30 @@
       </div>
     </div>
   </div>
+  </div>
+</div>
+<div style="display: unset" *ngIf="sign.sign_unit == 'chu_ky_anh'" class="content">
+  <div style="display: unset" class="stamp-content">
+    <div  class="stamp-content1">
+      <div style="display: flex;height: inherit;">
+        <div class="left-stamp">
+          <div>
+            <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/stamp.svg' : 'assets/img/stamp.svg'"
+                 alt="mobifone.contract">
+            <br>
+            <span class="text-stamp">Chữ ký ảnh</span>
+          </div>
+        </div>
+        <div class="right-stamp">
+          <div>
+            <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/only_info.svg' : 'assets/img/only_info.svg'"
+                 alt="mobifone.contract">
+            <br>
+            <span class="text-stamp">Thông tin chữ ký</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
