--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -19,19 +19,19 @@
                                       <p class="text-so-hop-dong" style="margin: 0;">{{'contract.number'|translate}}</p>
                                     </div>
                                 </div>
-                                
-                                
+
+
                                 <div  *ngIf="d.sign_unit == 'text'" class="content-drag mt-12px d-flex align-items-center justify-content-start hover-item-o-ky" id="element-drag-text">
                                     <div style="width: 24px; height: 24px;">
                                         <img style="object-fit: cover; width: 100%; height: 100%;" src="assets/img/text.png">
                                     </div>
-    
+
                                     <div style="flex-grow: 1; margin-left: 8px; text-align: left;">
                                         <p class="text-so-hop-dong" style="margin: 0px;">{{'Text'|translate}}</p>
                                     </div>
                                 </div>
-                                                        
-                                <!-- <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1 mt-12px" 
+
+                                <!-- <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1 mt-12px"
                                     id="element-drag">
                                     <img style="width: 24px; height: 24px;" [src]="d.sign_unit == 'chu_ky_so' ? 'assets/img/designtools.png' : ''">
                                     <div class="mt-8px">
@@ -52,18 +52,18 @@
                                                         <img loading="lazy" class="resize-drag" [id]="getIdSignChuaKeo(t.id)" style="object-fit: cover; width: 201px; height: 100%;" src="assets/img/con-dau-va-thong-tin.png">
                                                         <div class="text-ky">Chữ ký có con dấu và thông tin</div>
                                                     </div>
-                                            
+
                                                     <div class="item-ky" *ngIf="t.sign_unit == 'chu_ky_so_con_dau'">
                                                         <img loading="lazy" class="resize-drag" [id]="getIdSignChuaKeo(t.id)" style="object-fit: cover; width: 201px; height: 100%;" src="assets/img/con-dau.png">
                                                         <div class="text-ky">Chỉ có con dấu/ chữ ký</div>
                                                     </div>
-                                            
+
                                                     <div class="item-ky" *ngIf="t.sign_unit == 'chu_ky_so_thong_tin'">
                                                         <img loading="lazy" class="resize-drag" [id]="getIdSignChuaKeo(t.id)" style="object-fit: cover; width: 201px; height: 100%;" src="assets/img/thong-tin.png">
                                                         <div class="text-ky">Chỉ có thông tin</div>
                                                     </div>
                                                 </ng-container>
-                                            </div>                                            
+                                            </div>
                                         </div>
                                     </div>
 
@@ -75,9 +75,9 @@
                                 <div *ngIf="d.sign_unit == 'chu_ky_anh'" class="content-drag1 mt-12px hover-item-o-ky"
                                     id="element-drag" style="width: calc(100% - 24px);">
                                     <img style="width: 24px; height: 24px;" [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/imagesign.png' : ''"
-                                        [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" 
+                                        [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''"
                                         alt="ck.mobifone">
-                                    
+
                                     <div class="mt-8px">
                                         <span class="text-so-hop-dong" *ngIf="d.sign_unit == 'chu_ky_anh'">{{'sign.imagenew' |translate}}</span>
                                     </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-    
+
         <!--  file content-->
         <div class="col-lg-7">
             <div style="height: 48px; background-color: #EBF2FB; display: flex; justify-content: center;">
@@ -101,7 +101,7 @@
                         <img width="16px" height="16px" *ngIf="this.page1" src="assets/img/Prev.png">
                         <img width="16px" height="16px" *ngIf="!this.page1" src="assets/img/Prev.png">
                     </button>
-                
+
                     <input class="input1 no-focus" [(ngModel)]="pageNum" type="text" (keyup.enter)="onEnter($event)" />
                     &nbsp;/&nbsp;
                     <span class="page-number">{{ this.pageNumber }}</span>
@@ -110,11 +110,11 @@
                         <img width="6px" height="9px" *ngIf="this.pageLast" src="assets/img/Vector1.png">
                         <img width="6px" height="9px" *ngIf="!this.pageLast" src="assets/img/Vector1.png">
                     </button>
-                
+
                     <button class="call-page input1" (click)="lastPage()" id="prev">
                         <img width="16px" height="16px" *ngIf="this.pageLast" src="assets/img/Last.png">
                         <img width="16px" height="16px" *ngIf="!this.pageLast" src="assets/img/Last.png">
-                    </button>  
+                    </button>
                 </div>
             </div>
 
@@ -122,16 +122,16 @@
                 <div id="pdf-viewer-step-3">
                     <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
                         <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="changePosition(d)">
-                            <div *ngIf="d.sign_unit != 'text'" class="name-sig-img-daky long-text-ellipsis">{{d.name ? d.name : ''}}</div>
+                            <div [ngClass]="{'t-15' : d.sign_unit =='so_tai_lieu'}" *ngIf="d.sign_unit != 'text'" class="name-sig-img-daky long-text-ellipsis">{{d.name ? d.name : ''}}</div>
                             <div *ngIf="d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{d.text_attribute_name ? d.text_attribute_name  : ''}}</div>
                             <div class="sig-img-daky" (click)="onCancel($event, d)">
                                 <!-- <img src="assets/img/clear.svg" alt=""> -->
                                 <img src="assets/img/border-clear.svg" alt="">
                             </div>
-                            <app-sign-contract-template 
+                            <app-sign-contract-template
                             style="display: flex; width: 100%; padding: 4px;"
-                            [ngClass]="(d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh') ? 'main-sign-box': ''"  
-                            [datas]="datas" 
+                            [ngClass]="(d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh') ? 'main-sign-box': ''"
+                            [datas]="datas"
                             [sign]="d"></app-sign-contract-template>
                         </div>
                     </div>
@@ -195,9 +195,9 @@
                             </div>
                         </div>
                     </div>
-                        
+
                 </div>
-                
+
                 <div class="flex-column" style="margin: 32px 16px 0 16px;">
                     <label class="label-require">{{'position.coordinate' | translate}}</label>
                     <div class="row location">
