--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -82,7 +82,7 @@
         flex-direction: column;
       }
       // .show-list-name-class{
-      //   // display: inline-block; 
+      //   // display: inline-block;
       //   margin-bottom: 15px;
       // }
 
@@ -153,12 +153,12 @@
           display: flex;
           justify-content: space-around;
       }
-  
+
       .location-drag {
           display: flex;
           align-items: center;
           float: left;
-          
+
           .label {
               width: 56px;
               color: #666666;
@@ -167,7 +167,7 @@
               padding-right: 15px;
               padding-top: 10px;
           }
-  
+
           input {
               outline: none;
               width: 88px;
@@ -177,7 +177,7 @@
           }
       }
   }
-  
+
 
     @media screen and (max-height: 781px) {
       .location-change {
@@ -265,12 +265,14 @@
     position: absolute;
     background-color: yellow;
     border-radius: 5px;
-    top: -15px;
+    top: 55px;
     left: 6px;
     padding: 0 4px;
     border: 1px solid #ddd;
   }
-
+  .t-15 {
+    top: 15px;
+  }
   .sig-img-daky {
     cursor: pointer;
 
@@ -359,13 +361,13 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 19px;
-  box-sizing: border-box; 
-  text-align: center; 
+  box-sizing: border-box;
+  text-align: center;
   width: 24px;
   height: 24px;
   background: #FFFFFF;
   border: none;
-  border-radius: 3px; 
+  border-radius: 3px;
 }
 
 .handle {
@@ -429,7 +431,7 @@
           font-size: 14px;
         }
         .viewer-pdf.isDrag{
-          background-color: #f3f7f9; 
+          background-color: #f3f7f9;
           position: relative;
         }
         &__information{
@@ -466,7 +468,7 @@
                     flex-direction: row;
                 }
                 .content-drag1 span{
-                    width: 50px;       
+                    width: 50px;
                 }
             }
             .flex-column{
@@ -504,7 +506,7 @@
         font-size: 14px;
       }
       .viewer-pdf.isDrag{
-        background-color: #f3f7f9; 
+        background-color: #f3f7f9;
         position: relative;
       }
       &__information{
@@ -541,7 +543,7 @@
                   flex-direction: row;
               }
               .content-drag1 span{
-                  width: 50px;            
+                  width: 50px;
               }
           }
           .flex-column{
@@ -609,7 +611,7 @@
           flex-direction: row;
         }
         .content-drag1 span{
-          width: 50px;            
+          width: 50px;
         }
       }
       .flex-column{
@@ -629,7 +631,7 @@
             padding-right: 15px;
             padding-top: 10px;
           }
-    
+
           input {
             width: 80px;
             height: 40px;
@@ -678,7 +680,7 @@
           flex-direction: row;
         }
         .content-drag1 span{
-          width: 50px;            
+          width: 50px;
         }
       }
       .flex-column{
@@ -698,7 +700,7 @@
             padding-right: 15px;
             padding-top: 10px;
           }
-    
+
           input {
             width: 80px;
             height: 40px;
