--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -9,9 +9,9 @@
                 </div>
                 <div style="margin: 0px 16px;">
                     <div *ngFor="let d of this.datas.contract_user_sign" class="show-list-name-class">
-                        <div *ngIf="!d.sign_config.position" 
-                             [ngClass]="{'resize-drag': d.sign_unit !== 'chu_ky_so'}" 
-                             [id]="getIdSignChuaKeo(d.id)" 
+                        <div *ngIf="!d.sign_config.position"
+                             [ngClass]="{'resize-drag': d.sign_unit !== 'chu_ky_so'}"
+                             [id]="getIdSignChuaKeo(d.id)"
                              (click)="showThumbnail()">
                             <div style="position: relative; display: contents;">
                                 <!-- sửa lại nên bỏ [ngStyle]="setWidth(d)" -->
@@ -23,37 +23,37 @@
                                       <p class="text-so-hop-dong" style="margin: 0;">{{'contract.number'|translate}}</p>
                                     </div>
                                 </div>
-                                
-                                
+
+
                                 <div  *ngIf="d.sign_unit == 'text'" class="content-drag mt-12px d-flex align-items-center justify-content-start hover-item-o-ky" id="element-drag-text">
                                     <div style="width: 24px; height: 24px;">
                                         <img style="object-fit: cover; width: 100%; height: 100%;" src="assets/img/text.png">
                                     </div>
-    
+
                                     <div style="flex-grow: 1; margin-left: 8px; text-align: left;">
                                         <p class="text-so-hop-dong" style="margin: 0px;">{{'Text'|translate}}</p>
                                     </div>
                                 </div>
-                                                        
-                                <!-- <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1 mt-12px" 
+
+                                <!-- <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1 mt-12px"
                                     id="element-drag">
                                     <img style="width: 24px; height: 24px;" [src]="d.sign_unit == 'chu_ky_so' ? 'assets/img/designtools.png' : ''">
                                     <div class="mt-8px">
                                         <span class="text-so-hop-dong" *ngIf="d.sign_unit == 'chu_ky_so'">{{'sign.digital'|translate}}</span>
                                     </div>
                                 </div> -->
-    
+
                                 <div *ngIf="d.sign_unit == 'chu_ky_anh'" class="content-drag1 mt-12px hover-item-o-ky"
                                     id="element-drag" style="width: calc(100% - 24px);">
                                     <img style="width: 24px; height: 24px;" [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/imagesign.png' : ''"
-                                        [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" 
+                                        [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''"
                                         alt="ck.mobifone">
-                                    
+
                                     <div class="mt-8px">
                                         <span class="text-so-hop-dong" *ngIf="d.sign_unit == 'chu_ky_anh'">{{'sign.imagenew' |translate}}</span>
                                     </div>
                                 </div>
-                                                        
+
                                 <div *ngIf="d.sign_unit == 'chu_ky_so'" class="flex mt-12px" (click)="toggleDropdownChuKySo()" id="element-drag">
                                     <div  class="content-drag1 content-chu_ky_so_new hover-item-o-ky">
                                         <div class="flex">
@@ -67,18 +67,18 @@
                                                         <img loading="lazy" class="resize-drag" [id]="getIdSignChuaKeo(t.id)" style="object-fit: cover; width: 201px; height: 100%;" src="assets/img/con-dau-va-thong-tin.png">
                                                         <div class="text-ky">Chữ ký có con dấu và thông tin</div>
                                                     </div>
-                                            
+
                                                     <div class="item-ky" *ngIf="t.sign_unit == 'chu_ky_so_con_dau'">
                                                         <img loading="lazy" class="resize-drag" [id]="getIdSignChuaKeo(t.id)" style="object-fit: cover; width: 201px; height: 100%;" src="assets/img/con-dau.png">
                                                         <div class="text-ky">Chỉ có con dấu/ chữ ký</div>
                                                     </div>
-                                            
+
                                                     <div class="item-ky" *ngIf="t.sign_unit == 'chu_ky_so_thong_tin'">
                                                         <img loading="lazy" class="resize-drag" [id]="getIdSignChuaKeo(t.id)" style="object-fit: cover; width: 201px; height: 100%;" src="assets/img/thong-tin.png">
                                                         <div class="text-ky">Chỉ có thông tin</div>
                                                     </div>
                                                 </ng-container>
-                                            </div>                                            
+                                            </div>
                                         </div>
                                     </div>
 
@@ -93,7 +93,7 @@
             </div>
             <!-- <hr> -->
         </div>
-    
+
         <!--  file content-->
         <div class="col-lg-7">
             <div style="height: 48px; background-color: #EBF2FB; display: flex; justify-content: center;">
@@ -106,7 +106,7 @@
                         <img width="16px" height="16px" *ngIf="this.page1" src="assets/img/Prev.png">
                         <img width="16px" height="16px" *ngIf="!this.page1" src="assets/img/Prev.png">
                     </button>
-                
+
                     <input class="input1 no-focus" [(ngModel)]="pageNum" type="text" (keyup.enter)="onEnter($event)" />
                     &nbsp;/&nbsp;
                     <span class="page-number">{{ this.pageNumber }}</span>
@@ -115,46 +115,46 @@
                         <img width="6px" height="9px" *ngIf="this.pageLast" src="assets/img/Vector1.png">
                         <img width="6px" height="9px" *ngIf="!this.pageLast" src="assets/img/Vector1.png">
                     </button>
-                
+
                     <button class="call-page input1" (click)="lastPage()" id="prev">
                         <img width="16px" height="16px" *ngIf="this.pageLast" src="assets/img/Last.png">
                         <img width="16px" height="16px" *ngIf="!this.pageLast" src="assets/img/Last.png">
-                    </button>  
+                    </button>
                 </div>
             </div>
-            
+
             <div (scroll)="scroll($event)" id="pdf-full" class="sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
                 <div id="pdf-viewer-step-3">
                     <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag"
                         [style.width]="this.canvasWidth">
                         <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement
                             (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="(d.sign_unit != 'chu_ky_anh' && d.sign_unit != 'chu_ky_so') ? changePosition(d) : changePositionSignature(d)">
-                            <div *ngIf="d.name" class="name-sig-img-daky long-text-ellipsis">{{d.name ? d.name : ''}}</div>
+                            <div [ngClass]="{'t-15' : d.sign_unit =='so_tai_lieu'}" *ngIf="d.name" class="name-sig-img-daky long-text-ellipsis">{{d.name ? d.name : ''}}</div>
                             <div class="sig-img-daky" (click)="onCancel($event, d)">
                                 <!-- <img src="assets/img/clear.svg" alt=""> -->
                                 <img src="assets/img/border-clear.svg" alt="">
                             </div>
-                            <app-sign-contract style="display: flex; width: 100%; padding: 4px;"  [datas]="datas" [signTemplate]="false" [sign]="d" >        
+                            <app-sign-contract style="display: flex; width: 100%; padding: 4px;"  [datas]="datas" [signTemplate]="false" [sign]="d" >
                             </app-sign-contract>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    
+
         <div class="col-lg-2-5 cancel-padding">
             <div class="location-change" style="padding: 16px">
                 <div class="sample-contract__information--user-sign">
-    
+
                     <div style="margin: 0px 16px;">
                         <div class="text-title">{{'attribute' | translate}}</div>
-    
+
                         <div class="name-text mt-8px" *ngIf="isEnableText">
                             <label class="label-require">{{'attribute.name' | translate}}: <span style="color: red">*</span></label>
                             <input placeholder="{{ 'attribute.name' | translate }}" class="hover-item input_text" style="padding: 10px;" id="text-input-element" type="text" [(ngModel)]="this.objSignInfo.text_attribute_name"
                                 (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
                         </div>
-    
+
                         <div class="sign-unit-select mt-8px" *ngIf="isEnableText">
                             <label class="label-require">{{'attribute.text.type' | translate}}: <span style="color: red">*</span></label>
                             <select class="form-select hover-item no-focus" id="select-dropdown-text" aria-label="Default select example"
@@ -165,8 +165,8 @@
                                 <option *ngFor="let d of this.list_text_type, let i = index" [selected]="d.selected"
                                     value="{{d.id}}" [disabled]="d.is_disable">{{d.name | translate}}</option>
                             </select>
-                        </div> 
-    
+                        </div>
+
                         <div class="sign-unit-select mt-8px">
                             <label class="label-require">{{isEnableText || isChangeText ? ('user.import' | translate) : ('user.sign' | translate)}}: <span style="color: red">*</span></label>
                             <select class="form-select hover-item no-focus" id="select-dropdown" aria-label="Default select example"
@@ -177,7 +177,7 @@
                                     value="{{d.id}}" [disabled]="d.is_disable">{{getName(d)}}</option>
                             </select>
                         </div>
-        
+
                          <!--Option chọn font + size chữ-->
                         <div class="row sign-unit-select mt-8px">
                             <div class="col-md-8-5" style="padding-right: 0px;">
@@ -193,10 +193,10 @@
                                 <input *ngIf="!this.textSign" class="no-focus form-control hover-item input_text" [(ngModel)]="this.objSignInfo.font_size" (change)="changePositionSign($event, null, 'font_size')" readonly/>
                             </div>
                         </div>
-    
+
                     </div>
-    
-    
+
+
                 </div>
                 <!-- <hr> -->
                 <div class="flex-column" style="margin: 32px 16px 0 16px;">
@@ -213,7 +213,7 @@
                                 [ngModel]="getTrafY()" [readOnly]="false">
                         </div>
                     </div>
-    
+
                     <div class="location row">
                         <div class="location-drag col-md-6 mt-8px" style="padding-right: 6px">
                             <div class="label-require">{{'height' | translate}}</div>
@@ -228,7 +228,7 @@
                     </div>
                 </div>
                 <!-- <hr> -->
-                
+
                 <!-- <div class="flex-column">
                     <div class="location">
                         <div class="location-drag">
@@ -257,7 +257,7 @@
             <div>
                 <button (click)="next('save_draft')" type="button" name="saveDocument" class="next draft-button">{{'btn.save-draft' | translate}}</button>
                 <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
-            </div>         
+            </div>
         </div>
     </div>
 </div>
